  No changes.

version 1.4.2rc02 [April 16, 2010]
  Documented the fact that png_set_dither() was disabled since libpng-1.4.0.
  Reenabled png_set_dither() but renamed it to png_set_quantize() to reflect
    more accurately what it actually does.  At the same time, renamed
    the PNG_DITHER_[RED,GREEN_BLUE]_BITS macros to
    PNG_QUANTIZE_[RED,GREEN,BLUE]_BITS.

version 1.4.2rc03 [April 24, 2010]
  Added some "(long)" typecasts to printf calls in png_handle_cHRM().
  Relaxed the overly-restrictive permissions of some files.

version 1.4.2rc04 [April 28, 2010]
  Added the "vstudio" project to replace "visualc6" and "visualc71" which
    will be removed from libpng-1.5.0.
  Demonstrate in example.c that lang_key should be initialized.
  Set PNG_NO_READ_BGR, PNG_NO_IO_STATE, and PNG_NO_TIME_RFC1123 in
    contrib/pngminim/decoder/pngusr.h to make a smaller decoder application.

version 1.4.2rc05 [April 29, 2010]
  Include png_reset_zstream() in png.c only when PNG_READ_SUPPORTED is defined.
  Removed dummy_inflate.c and uncompr.c from contrib/pngminim/encoder
  Corrected PNG_UNKNOWN_CHUNKS_SUPPORTED to PNG_HANDLE_AS_UNKNOWN_SUPPORTED
    in gregbook/readpng2.c
  Corrected protection of png_get_user_transform_ptr. The API declaration in
    png.h is removed if both READ and WRITE USER_TRANSFORM are turned off
    but was left defined in pngtrans.c

version 1.4.2rc06 [May 3, 2010]
  Moved declarations of umsg[] inside the proper #ifdef blocks in pngrutil.c

version 1.4.2 [May 6, 2010]

version 1.4.3beta01 [June 18, 2010]
  Added missing quotation marks in the aix block of configure.ac
  The new "vstudio" project was missing from the zip and 7z distributions.
  In pngpread.c: png_push_have_row() add check for new_row > height

Send comments/corrections/commendations to glennrp at users.sourceforge.net
or to png-mng-implement at lists.sf.net (subscription required; visit
https://lists.sourceforge.net/lists/listinfo/png-mng-implement).

Glenn R-P
*/ }
#endif