@@ -1,5 +1,5 @@
 
-Libpng 1.4.3beta01 - June 18, 2010
+Libpng 1.4.3beta02 - June 18, 2010
 
 This is not intended to be a public release.  It will be replaced
 within a few weeks by a public version or by another test version.
@@ -9,20 +9,20 @@ Files available for download:
 Source files with LF line endings (for Unix/Linux) and with a
 "configure" script
 
-   1.4.3beta01.tar.xz (LZMA-compressed, recommended)
-   1.4.3beta01.tar.gz
-   1.4.3beta01.tar.bz2
+   1.4.3beta02.tar.xz (LZMA-compressed, recommended)
+   1.4.3beta02.tar.gz
+   1.4.3beta02.tar.bz2
 
 Source files with CRLF line endings (for Windows), without the
 "configure" script
 
-   lp143b01.zip
-   lp143b01.7z
+   lp143b02.zip
+   lp143b02.7z
 
 Other information:
 
-   1.4.3beta01-README.txt
-   1.4.3beta01-LICENSE.txt
+   1.4.3beta02-README.txt
+   1.4.3beta02-LICENSE.txt
 
 Changes since the last public release (1.4.2):
 
@@ -30,6 +30,7 @@ version 1.4.3beta01 [June 18, 2010]
   Added missing quotation marks in the aix block of configure.ac
   The new "vstudio" project was missing from the zip and 7z distributions.
   In pngpread.c: png_push_have_row() add check for new_row > height
+  Removed the now-redundant check for out-of-bounds new_row from example.c
 
 Send comments/corrections/commendations to glennrp at users.sourceforge.net
 or to png-mng-implement at lists.sf.net (subscription required; visit
