@@ -1,6 +1,6 @@
 .TH LIBPNG 3 "June 18, 2010"
 .SH NAME
-libpng \- Portable Network Graphics (PNG) Reference Library 1.4.3beta01
+libpng \- Portable Network Graphics (PNG) Reference Library 1.4.3beta02
 .SH SYNOPSIS
 \fI\fB
 
@@ -785,7 +785,7 @@ Following is a copy of the libpng.txt file that accompanies libpng.
 .SH LIBPNG.TXT
 libpng.txt - A description on how to use and modify libpng
 
- libpng version 1.4.3beta01 - June 18, 2010
+ libpng version 1.4.3beta02 - June 18, 2010
  Updated and distributed by Glenn Randers-Pehrson
  <glennrp at users.sourceforge.net>
  Copyright (c) 1998-2009 Glenn Randers-Pehrson
@@ -796,7 +796,7 @@ libpng.txt - A description on how to use and modify libpng
 
  Based on:
 
- libpng versions 0.97, January 1998, through 1.4.3beta01 - June 18, 2010
+ libpng versions 0.97, January 1998, through 1.4.3beta02 - June 18, 2010
  Updated and distributed by Glenn Randers-Pehrson
  Copyright (c) 1998-2009 Glenn Randers-Pehrson
 
@@ -1688,7 +1688,7 @@ things.
 As of libpng version 1.2.9, png_set_expand_gray_1_2_4_to_8() was
 added.  It expands the sample depth without changing tRNS to alpha.
 
-As of libpng version 1.4.3beta01, not all possible expansions are supported.
+As of libpng version 1.4.3beta02, not all possible expansions are supported.
 
 In the following table, the 01 means grayscale with depth<8, 31 means
 indexed with depth<8, other numerals represent the color type, "T" means
@@ -4088,7 +4088,7 @@ Since the PNG Development group is an ad-hoc body, we can't make
 an official declaration.
 
 This is your unofficial assurance that libpng from version 0.71 and
-upward through 1.4.3beta01 are Y2K compliant.  It is my belief that earlier
+upward through 1.4.3beta02 are Y2K compliant.  It is my belief that earlier
 versions were also Y2K compliant.
 
 Libpng only has three year fields.  One is a 2-byte unsigned integer that
@@ -4325,7 +4325,7 @@ possible without all of you.
 
 Thanks to Frank J. T. Wojcik for helping with the documentation.
 
-Libpng version 1.4.3beta01 - June 18, 2010:
+Libpng version 1.4.3beta02 - June 18, 2010:
 Initially created in 1995 by Guy Eric Schalnat, then of Group 42, Inc.
 Currently maintained by Glenn Randers-Pehrson (glennrp at users.sourceforge.net).
 
@@ -4348,7 +4348,7 @@ this sentence.
 
 This code is released under the libpng license.
 
-libpng versions 1.2.6, August 15, 2004, through 1.4.3beta01, June 18, 2010, are
+libpng versions 1.2.6, August 15, 2004, through 1.4.3beta02, June 18, 2010, are
 Copyright (c) 2004,2006-2007 Glenn Randers-Pehrson, and are
 distributed according to the same disclaimer and license as libpng-1.2.5
 with the following individual added to the list of Contributing Authors
