@@ -1,6 +1,6 @@
 .TH LIBPNGPF 3 "June 18, 2010"
 .SH NAME
-libpng \- Portable Network Graphics (PNG) Reference Library 1.4.3beta01
+libpng \- Portable Network Graphics (PNG) Reference Library 1.4.3beta02
 (private functions)
 .SH SYNOPSIS
 \fB#include <png.h>\fP
