@@ -1627,4 +1627,4 @@ main(int argc, char *argv[])
 }
 
 /* Generate a compiler error if there is an old png.h in the search path. */
-typedef version_1_4_3beta01 your_png_h_is_not_version_1_4_3beta01;
+typedef version_1_4_3beta02 your_png_h_is_not_version_1_4_3beta02;
