@@ -2,7 +2,7 @@
 <!--
  * zlib.props - location of zlib source and build
  *
- * libpng version 1.4.3beta01 - June 18, 2010
+ * libpng version 1.4.3beta02 - June 18, 2010
  *
  * Copyright (c) 1998-2010 Glenn Randers-Pehrson
  *
