@@ -5,6 +5,6 @@ includedir=@includedir@/libpng14
 
 Name: libpng
 Description: Loads and saves PNG files
-Version: 1.4.3beta01
+Version: 1.4.3beta02
 Libs: -L${libdir} -lpng14
 Cflags: -I${includedir}
