@@ -15,7 +15,7 @@ LIBRARY lpngce
  png_get_int_32
 
 EXPORTS
-;Version 1.4.3beta01
+;Version 1.4.3beta02
   png_build_grayscale_palette  @1
 ;  png_check_sig        @2
   png_chunk_error      @3
