@@ -2,7 +2,7 @@
 ; PNG.LIB module definition file for OS/2
 ;----------------------------------------
 
-; Version 1.4.3beta01
+; Version 1.4.3beta02
 
 LIBRARY		PNG
 DESCRIPTION	"PNG image compression library for OS/2"
